[package]
name = "rocket_async_compression"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/Ameobea/rocket_async_compression"
description = "Response compression in both gzip and brotli formats for the Rocket webserver using the `async-compression` library"
license = "MIT"
keywords = ["rocket", "gzip", "brotli", "compression"]

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master" }
lazy_static = "1.4"
futures = "0.3.17"
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes"] }

async-compression = { version = "0.4", features = ["gzip", "brotli", "tokio"] }
